# DNS-Relay

./: CMakeLists.txt  Makefile  README.md  dnsrelay_ipv6.txt  host6.txt
docs/: README.md  cross-platform-implementation.md  linux-build-guide.md  计算机网络课程设计-DNS.pptx
docs/参考资料/: ._RFC1034.TXT  ._RFC1035.TXT  ._RFC1035.doc
src/: README.md  blacklist.c  blacklist.h  cache.c  cache.h  datastructure.c  datastructure.h  dnsStruct.c  dnsStruct.h  host.c  host.h  log.c  log.h  main.c  response.c  response.h  server.c  server.h  trie.c  trie.h
src/跨平台/: CROSS_PLATFORM.md  Makefile  host.h  main.c  platform.c  platform.h  server.c  server.h
test/: Makefile  benchmark.c  test_cache.c  test_crossplatform.c  test_trie.c
